--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/material-top-tabs": "^6.6.14",
+    "@reduxjs/toolkit": "^2.3.0",
     "@supabase/supabase-js": "^2.45.4",
     "@tamagui/lucide-icons": "^1.115.5",
     "@tamagui/themes": "^1.115.5",
@@ -37,6 +39,8 @@
     "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "tamagui": "^1.115.5"
   },
   "devDependencies": {
