--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@supabase/supabase-js": "^2.45.4",
     "@tamagui/lucide-icons": "^1.115.5",
     "@tamagui/themes": "^1.115.5",
+    "@tanstack/react-query": "^5.59.15",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
