--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@reduxjs/toolkit": "^2.3.0",
-    "@shopify/flash-list": "^1.7.1",
+    "@shopify/flash-list": "1.6.4",
     "@supabase/supabase-js": "^2.45.4",
     "@tamagui/lucide-icons": "^1.115.5",
     "@tamagui/themes": "^1.115.5",
     "@tanstack/react-query": "^5.59.15",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.28",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -37,7 +39,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-google-mobile-ads": "^14.2.5",
     "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
@@ -50,6 +55,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
