--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "joke-central",
-    "slug": "joke-central",
-    "version": "1.3.0",
+    "name": "Joke Central",
+    "slug": "JokeCentral",
+    "version": "1.4.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
