--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "tamagui": "^1.115.5"
+    "tamagui": "^1.115.5",
+    "expo-tracking-transparency": "~4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
